--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,10 @@ textarea.form-control {
   vertical-align: top;
   font-size: 15px;
   line-height: 1.6;
+  background-color: #fdfdfd;
+  border-radius: 8px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.05);
+  display: block;
 }
 
 .btn {
